--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<p>
 		<center>
 			Welcome to my website! 
-		This is about myself, my interests, education, publication and publications. 
+		This is about myself, my interests, education, publication and projects. 
 		<br>
 		Feel free to browse around.	
 		</center>
