--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
 	<p>
 		<center>
-			Welcome to my website! 
-		This is about myself, my interests, education, publication and projects. 
+			<h2 style="color:#CB2D6F; font-family:'Architects Daughter', cursive;">Welcome to my website!</h2> 
+			
+		This page is about myself, my interests, education, publication and publications. 
 		<br>
 		Feel free to browse around.	
 		</center>
@@ -56,17 +57,17 @@
 			<br>
 			My interests in Computer science lie in </p>
 			<ul>
-				<li>Game development using Unity and C#</li>
-				<li>Programming using C++</li>
-				<li>Cryptography and network security</li>
-				<li>Mobile app development using android</li>
+				<li> Game development using Unity and C#</li>
+				<li> Programming using C++</li>
+				<li> Cryptography and network security</li>
+				<li> Mobile app development using android</li>
 			</ul>
 			<p>	I have learnt the following languages </p>
 			<ul>
-				<li>C++, C</li>
-				<li>Shell Scripting</li>				
-				<li>HTML, CSS, JS</li>
-				<li>Android, Java, Python</li>
+				<li> C++, C</li>
+				<li> Shell Scripting</li>				
+				<li> HTML, CSS, JS</li>
+				<li> Android, Java, Python</li>
 			</ul>
 		<p>
 			<br>
