--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
 	<p>
 		<center>
-			Welcome to my website! 
-		This is about myself, my interests, education, publication and publications. 
+			<h2 style="color:#CB2D6F; font-family:'Architects Daughter', cursive;">Welcome to my website!</h2> 
+			
+		This page is about myself, my interests, education, publication and publications. 
 		<br>
 		Feel free to browse around.	
 		</center>
@@ -56,17 +57,17 @@
 			<br>
 			My interests in Computer science lie in </p>
 			<ul>
-				<li>Game development using Unity and C#</li>
-				<li>Programming using C++</li>
-				<li>Cryptography and network security</li>
-				<li>Mobile app development using android</li>
+				<li> Game development using Unity and C#</li>
+				<li> Programming using C++</li>
+				<li> Cryptography and network security</li>
+				<li> Mobile app development using android</li>
 			</ul>
 			<p>	I have learnt the following languages </p>
 			<ul>
-				<li>C++, C</li>
-				<li>Shell Scripting</li>				
-				<li>HTML, CSS, JS</li>
-				<li>Android, Java, Python</li>
+				<li> C++, C</li>
+				<li> Shell Scripting</li>				
+				<li> HTML, CSS, JS</li>
+				<li> Android, Java, Python</li>
 			</ul>
 		<p>
 			<br>
@@ -208,11 +209,11 @@
 			<p>
 			Some ways to connect with me :
 			<ol id="contact-list">
-				<li><i class="fa fa-code" style="color:brown"></i> Codechef: <a href="https://www.codechef.com/users/cheese_cubes" target="_blank">cheese_cubes</a></li>
+				<li><i class="fa fa-code" style="color:brown"></i> Codechef: <a href="https://www.codechef.com/users/cheese_cubes" target="_blank"> cheese_cubes</a></li>
 				<li><i class="fa fa-header" style="color:green;"></i>
-				 Hackerrank: <a href="https://www.hackerrank.com/kaitokudo12" target="_blank">kaitokudo12</a></li>
-				<li><i class="fa fa-linkedin-square" style="color:blue;"></i>  Linkedin:<a href="https://www.linkedin.com/in/annapoorani-anantharaman-8b697b178/" target="_blank">annapoorani anantharaman</a></li>
-				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank">ScarletKnight12</a></li>
+				 Hackerrank: <a href="https://www.hackerrank.com/kaitokudo12" target="_blank"> kaitokudo12</a></li>
+				<li><i class="fa fa-linkedin-square" style="color:blue;"></i>  Linkedin: <a href="https://www.linkedin.com/in/annapoorani-anantharaman-8b697b178/" target="_blank"> annapoorani anantharaman</a></li>
+				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank"> ScarletKnight12</a></li>
 			</ol>
 
 		</p>
