--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="about-content" class="content">
 		<br>
 		<h1>About</h1>
-		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img" height="550px" width="25%" title="My image">
+		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img" height="550px" width="25%" title="My image" class="mobile-image">
 
 		<p>
 			Hi! My name is Annapoorani Anantharaman. I am from Chennai. I love drawing, music and am a total movie-buff. 
@@ -84,14 +84,14 @@
 		<br>
 		<h1>Publication</h1>
 		
-		I published two papers:
+		I have published two papers:
 		<ol>
 			<li>Paper on Almond - a chatbot using AI that assists and acts as a companion for the elderly</li>
-			<p>Published in 6th international conference on science, technology, engineering and management(ICONSTEM) in 2020. The paper was about my project, a chatbot using ai that would act as a companion. It used a multimodal interface and a simple way for interacion. It could support the elderly by voice interaction and speach recognition. It used Artificial intelligence and was developed in Android.<br>
+			<p>Published in 6th international conference on science, technology, engineering and management(ICONSTEM) in <u>2020</u>. The paper was about my project, a chatbot using ai that would act as a companion. It used a multimodal interface and a simple way for interacion. It could support the elderly by voice interaction and speach recognition. It used Artificial intelligence and was developed in Android.<br>
 			<a href="https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=bf19ff8d2b&attid=0.2&permmsgid=msg-a:r5512794654132168067&th=170f1e2690ea2c58&view=att&disp=inline&realattid=f_k7yhk4ym1&saddbat=ANGjdJ957ImNZQp1UvyOb23vcCNWNY09V0kBmZ0IW4Y-hyicL4AjSwnxyZQgBf8UMo9QaaCCIYb_dsRAWJmCt8_cFJxiQq18Ffkef257SpDbGZdoH74IAVGcrHpKu0NlOzAarPWgG9FjkamGdAxoKCBm2JXQHNAzjrJFBQt1j-Y6NlkQm4wuPHxrIQanbAMzjzuab8wGBBsj-n8R22LrfjydzpHCVn92DXppiGtovm5DoHJZU7WSG1CeXA2Tb_aYE4bSqZBTsz2GDt_I4eDeUhrn8oee6ob6Qj0Uzg55gG8Q1HljE3YR-MQI-3L4LHJj2z86aoa3qkJHuTtbj_rTHDrUjFl97guQfQed0lEj0ecs5V7-aXWgOginTdkGCCkNPv1_hia7b_GqC_0i7RGkhZNoeyTRF_zVV8VkLfaT_IuD2Hi1n18NUqHcoaIB6mKc-rO5djpdb2CCXqFTv5paV_ieBE6JUG1w2c1h7sAg3ALEzfXHbRf7KGCklwFVgpNpIbNuHv9JiqPYpcFUwYz1hPYZ1yQ5FNul4gpOF-sjQmc5Z_kKp2SE0nfcjVwnImHWJZTSJhiA7okcXS2jYuJHzOYa_JCAlbzIpH9DFLAcjG5x4Tw5qderkLifHIdZfgohNX2M9F_HAy8ss2J8mji_xiW_boFFTc4tnMzaUDlHJp2ux0XN_-VCFLjekoB0LOw"> My paper</a></p>
 			
 			<li>A study of logistic regression and its optimization techniques using Octave Chennai</li>
-			<p>Published a paper on machine learning in SSRG IJCSE – International Journal of Computer Science and Engineering in 2019. The paper was about logistic regression mostly. <br>
+			<p>Published a paper on machine learning in SSRG IJCSE – International Journal of Computer Science and Engineering in <u>2019</u>. The paper was about logistic regression mostly. <br>
 			<a href="https://www.internationaljournalssrg.org/IJCSE/paper-details?Id=349">My paper</a></p>
 		</ol>
 	</div>
@@ -113,25 +113,27 @@
 					<p> Desgined in 2021. Using Unity, C#. Single player game whose goal is to use a paddle to bounce balls to hit blocks. 
 					There are several levels and the player is provided with hearts to mark lives. Power ups are available and a score board keeps track
 					
+					<li>2D shooter</li>
+					<p>A 2D shooting game using Unity. Single player game to shoot enemies and avoid getting hit. Implementing prefabs,vfx, motion, game objects, components and functions in Unity and C#. Made using Visual Studio.</p>
 
 
 					<li>Almond - chatbot</li>
 					<p> Android, Java, Artificial Intelligence. A chatbot that assists and acts as a companion for the elderly using Artificial Intelligence. Offers a multimodal interface with many features. Made using Android Studio in 2020.</p>
 
-					<li>Touch-me-not</li>
-					<p>C++. A single-player game using Object Oriented Programming, dynamic programming concepts and accessing coordinates of points using windows.h header. The game allows to move keys w,s,d,l in order to move dots which get longer when they run. Added features to improve complexity.The goal of the game is to not let the dots touch each other or itself. Developed in Dev C++ editor</p>
 
 					<li>Anchor - chat application</li>
 					<p>Javascript, HTML 5, CSS 3 , Node JS. Brief Description: A Chat Application built by using NodeJS runtime and framework like Express JS. It allows multiple players to chat with each other and displays a list of people online at a given instance.</li>
 
-					<li>2D shooter</li>
-					<p>A 2D shooting game using Unity. Single player game to shoot enemies and avoid getting hit. Implementing prefabs,vfx, motion, game objects, components and functions in Unity and C#. Made using Visual Studio.</p>
+
+					<li>Touch-me-not</li>
+					<p>C++. A single-player game using Object Oriented Programming, dynamic programming concepts and accessing coordinates of points using windows.h header. The game allows to move keys w,s,d,l in order to move dots which get longer when they run. Added features to improve complexity.The goal of the game is to not let the dots touch each other or itself. Developed in Dev C++ editor</p>
+			
 
 					<li>Connect 4 game</li>
-					<p>A two player game for playing connect 4 using dynamic programming in JS, HTML,CSS.</p>
-					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" width="30%" height="350px">
-					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" width="36%" height="350px">
-					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" width="300px" height="350px">
+					<p>A two player game for playing connect 4 using dynamic programming in JS, HTML,CSS. The objective of the game is to score 4 consecutive coins such that its formed in a row, column or diagonally. </p>
+					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="game-image mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" class="vertical-game mobile-image">
 
 				</div>
 
@@ -147,18 +149,20 @@
 		<h1>Education</h1>
 		<p>
 			My education was primarily in chennai. I had a really fun school which would prioritise extra curricular activities a lot.
-			My teachers were fun and the student community was smaller, relatively. So everyone knew everyone.
+			My teachers were nice and the student community was smaller, relatively. So everyone knew everyone.
 			<br>
 			I learnt classical dance and used to perform for our school annual day. 
-			Sports were given equal importance too. But Id rarely do them. I hated getting sweaty, so i preferred chess.
+			Sports were given equal importance too. I played chess and badminton (admittedly badly), and joined in the yoga club. Life was mostly play time then.
 			<br>
 			Then came college and books became bigger suddenly. So much to study and semester concept was new. Half a year to study a subject?!
-			Seemed insane at that time. But i did have memorable college days. New experiences in so many aspects.
-			I saw many things, learnt many things. Both in computer science and life.
+			 Seemed insane at that time. Slowly i started learning many new things and found it fascinating how computers worked. I started understanding how such a small machine had so much to it. My profound liking increased with subjects like Data Structures and algorithms, Computer Architecture, Game theory and Cryptography. I was soon accepted into the coding club in my college.
+			 <br>
+			 I got the chance to attend many events and seminars and coding contests and my exposure widened greatly.
+			 I made projects with the languages I learnt. I had many memorable college days. New experiences in so many aspects.
 			<br>
 			<a href="https://jeppiaarcollege.org/jeppiaar/" target="_blank"> https://jeppiaarcollege.org/jeppiaar/</a>  
 			<br>
-			Now I have started yet another adventure, first time in a new city, away from home.
+			Now I have started yet another adventure, in the form of a masters course in a new University.
 			I am excited. Despite pervasive persistent covid.
 			<br>
 			<a href="https://www.iiit.ac.in/" target="_blank"> https://www.iiit.ac.in/</a>
@@ -213,7 +217,7 @@
 				<li><i class="fa fa-header" style="color:green;"></i>
 				 Hackerrank: <a href="https://www.hackerrank.com/kaitokudo12" target="_blank"> kaitokudo12</a></li>
 				<li><i class="fa fa-linkedin-square" style="color:blue;"></i>  Linkedin: <a href="https://www.linkedin.com/in/annapoorani-anantharaman-8b697b178/" target="_blank"> annapoorani anantharaman</a></li>
-				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank"> ScarletKnight12</a></li>
+				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank">ScarletKnight12</a></li>
 			</ol>
 
 		</p>
