--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 		<p>
 			My bachelors degree in computer science and engineering was in Chennai. I did my Bachelors in Computer Science and engineering.
 			
-			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My img" height="600px" width="50%" title="My image">
-			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My img" height="600px" width="45%" title="My image">
+			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My college" height="600px" width="50%" title="My image">
+			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My college" height="600px" width="45%" title="My image">
 			<br>
 		</p>
 
