--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="about-content" class="content">
 		<br>
 		<h1>About</h1>
-		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img" height="550px" width="25%" title="My image" class="mobile-image">
+		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic">
 
 		<p>
 			Hi! My name is Annapoorani Anantharaman. I am from Chennai. I love drawing, music and am a total movie-buff. 
@@ -131,8 +131,8 @@
 
 					<li>Connect 4 game</li>
 					<p>A two player game for playing connect 4 using dynamic programming in JS, HTML,CSS. The objective of the game is to score 4 consecutive coins such that its formed in a row, column or diagonally. </p>
-					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image mobile-image">
-					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="game-image mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image-1 mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="game-image-2 mobile-image">
 					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" class="vertical-game mobile-image">
 
 				</div>
@@ -154,11 +154,11 @@
 			I learnt classical dance and used to perform for our school annual day. 
 			Sports were given equal importance too. I played chess and badminton (admittedly badly), and joined in the yoga club. Life was mostly play time then.
 			<br>
-			Then came college and books became bigger suddenly. So much to study and semester concept was new. Half a year to study a subject?!
-			 Seemed insane at that time. Slowly i started learning many new things and found it fascinating how computers worked. I started understanding how such a small machine had so much to it. My profound liking increased with subjects like Data Structures and algorithms, Computer Architecture, Game theory and Cryptography. I was soon accepted into the coding club in my college.
+			Then came college and books became bigger suddenly.I started learning many new things and found it fascinating how computers worked. My profound liking increased with subjects like Data Structures and algorithms, Compiler Design, Game theory and Cryptography. 
 			 <br>
-			 I got the chance to attend many events and seminars and coding contests and my exposure widened greatly.
-			 I made projects with the languages I learnt. I had many memorable college days. New experiences in so many aspects.
+			 I joinedthe coding club in my college and got the chance to attend many events and seminars and contests and my exposure widened greatly. I made projects with the languages I learnt.
+			 <br>
+			 I had many memorable college days. New experiences in so many aspects.
 			<br>
 			<a href="https://jeppiaarcollege.org/jeppiaar/" target="_blank"> https://jeppiaarcollege.org/jeppiaar/</a>  
 			<br>
@@ -193,9 +193,9 @@
 
 		<p>
 			My bachelors degree in computer science and engineering was in Chennai. I did my Bachelors in Computer Science and engineering.
-			
-			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My college" height="600px" width="50%" title="My image">
-			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My college" height="600px" width="45%" title="My image">
+			<br>
+			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My college" class="college-pic" title="My image">
+			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My college" class="college-pic" title="My image">
 			<br>
 		</p>
 
