--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
 					<li>Connect 4 game</li>
 					<p>A two player game for playing connect 4 using dynamic programming in JS, HTML,CSS. The objective of the game is to score 4 consecutive coins such that its formed in a row, column or diagonally. </p>
-					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image-1 mobile-image">
-					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="game-image-2 mobile-image">
-					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" class="vertical-game mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="my-game-image-1">
+					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="my-game-image-2">
+					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" class="my-vertical-game">
 
 				</div>
 
@@ -194,8 +194,8 @@
 		<p>
 			My bachelors degree in computer science and engineering was in Chennai. I did my Bachelors in Computer Science and engineering.
 			<br>
-			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My college" class="college-pic" title="My college">
-			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My college" class="college-pic" title="My college">
+			<img src="https://drive.google.com/uc?export=view&id=14p_nW1dbyoSjnVQ2WR392w-0RGAKRYnK" alt="My college" class="my-college-pic" title="My college">
+			<img src="https://drive.google.com/uc?export=view&id=13j9_DFJ9kpyBh-8EpDE8FtrysZW9ct-W" alt="My college" class="my-college-pic" title="My college">
 			<br>
 		</p>
 
