--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="about-content" class="content">
 		<br>
 		<h1>About</h1>
-		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic">
+		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic" style="border-radius: 5%;">
 
 		<p>
 			Hi! My name is Annapoorani Anantharaman. I am from Chennai. I love drawing, music and am a total movie-buff. 
