--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="about-content" class="content">
 		<br>
 		<h1>About</h1>
-		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" style="border-radius: 5%;height: 550px; width: 25%;">
+		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic">
 
 		<p>
 			Hi! My name is Annapoorani Anantharaman. I am from Chennai. I love drawing, music and am a total movie-buff. 
@@ -57,17 +57,18 @@
 			<br>
 			My interests in Computer science lie in </p>
 			<ul>
-				<li> Game development using Unity and C#</li>
-				<li> Programming using C++</li>
-				<li> Cryptography and network security</li>
-				<li> Mobile app development using android</li>
+				<li> &emsp; Game development using Unity and C#</li>
+				<li> &emsp; Programming using C++</li>
+				<li> &emsp; Cryptography and network security</li>
+				<li> &emsp; Mobile app development using android</li>
 			</ul>
+			<br>
 			<p>	I have learnt the following languages </p>
 			<ul>
-				<li> C++, C</li>
-				<li> Shell Scripting</li>				
-				<li> HTML, CSS, JS</li>
-				<li> Android, Java, Python</li>
+				<li> &emsp; C++, C</li>
+				<li> &emsp; Shell Scripting</li>				
+				<li> &emsp; HTML, CSS, JS</li>
+				<li> &emsp; Android, Java, Python</li>
 			</ul>
 		<p>
 			<br>
@@ -131,9 +132,10 @@
 
 					<li>Connect 4 game</li>
 					<p>A two player game for playing connect 4 using dynamic programming in JS, HTML,CSS. The objective of the game is to score 4 consecutive coins such that its formed in a row, column or diagonally. </p>
-					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image-1 mobile-image">
 					<img src="https://drive.google.com/uc?export=view&id=1YPFA7nCkNSL1c4C1CWCY-6vx4pr3uFqu" alt="Game image" title="Ball breaker" class="game-image-2 mobile-image">
 					<img src="https://drive.google.com/uc?export=view&id=1LGMfCwgfsUJyijzB6VSV1HaR5lDFTHW1" alt="Game image" title="Almond" class="vertical-game mobile-image">
+					<img src="https://drive.google.com/uc?export=view&id=11LWVzuqKIXwmffqUQP4Ihq8KXsnY77HC" alt="Game image" title="Connect 4" class="game-image-1 mobile-image">
+					
 
 				</div>
 
@@ -173,20 +175,20 @@
 			<tr>
 				<th rowspan="2"> Schooling</th>
 				<td>Upto 10th grade</td>
-				<td>The Ashram school icse</td>
+				<td style="border-right: 8px dotted #CB2D6F;">The Ashram school icse</td>
 			</tr>
 			<tr> 
 				<td>11th and 12th</td>
-				<td>The Ashram School Matric. HSSC</td>
+				<td style="border-right: 8px dotted #CB2D6F;">The Ashram School Matric. HSSC</td>
 			</tr>
 			<tr>
-				<th rowspan="2"> College</th>
+				<th rowspan="2" style="border-bottom: 8px dotted #CB2D6F;"> College</th>
 				<td>B.E computer science</td>
-				<td>Jeppiaar Engineering college</td>
+				<td style="border-right: 8px dotted #CB2D6F; ">Jeppiaar Engineering college</td>
 			</tr>
 			<tr> 
-				<td>M.E computer science</td>
-				<td>IIIT Hyderabad</td>
+				<td style="border-bottom: 8px dotted #CB2D6F;">M.E computer science</td>
+				<td style="border-right: 8px dotted #CB2D6F;border-bottom: 8px dotted #CB2D6F;">IIIT Hyderabad</td>
 			</tr>
 
 		</table>
@@ -217,8 +219,8 @@
 				<li><i class="fa fa-code" style="color:brown"></i> Codechef: <a href="https://www.codechef.com/users/cheese_cubes" target="_blank"> cheese_cubes</a></li>
 				<li><i class="fa fa-header" style="color:green;"></i>
 				 Hackerrank: <a href="https://www.hackerrank.com/kaitokudo12" target="_blank"> kaitokudo12</a></li>
-				<li><i class="fa fa-linkedin-square" style="color:blue;"></i>  Linkedin: <a href="https://www.linkedin.com/in/annapoorani-anantharaman-8b697b178/" target="_blank"> annapoorani anantharaman</a></li>
-				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank">ScarletKnight12</a></li>
+				<li><i class="fa fa-linkedin-square" style="color:blue;"></i>  Linkedin: <a href="https://www.linkedin.com/in/annapoorani-anantharaman-8b697b178/" target="_blank"> Annapoorani Anantharaman</a></li>
+				<li><i class="fa fa-github"></i>  Github: <a href="https://github.com/ScarletKnight12" target="_blank">Annapoorani A</a></li>
 
 			</ol>
 
