--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</ul>
 			<br>
 			<p>	I have learnt the following languages </p>
-			<ul>
+			<ul style="list-style-type: none;">
 				<li> &emsp; C++, C</li>
 				<li> &emsp; Shell Scripting</li>				
 				<li> &emsp; HTML, CSS, JS</li>
