--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 			</ul>
 			<br>
 			<p>	I have learnt the following languages </p>
-			<ul style="list-style-type: none;">
-				<li> &emsp; C++, C</li>
-				<li> &emsp; Shell Scripting</li>				
-				<li> &emsp; HTML, CSS, JS</li>
-				<li> &emsp; Android, Java, Python</li>
+			<ul >
+				<li style="list-style-type: none;"> &emsp; C++, C</li>
+				<li style="list-style-type: none;"> &emsp; Shell Scripting</li>				
+				<li style="list-style-type: none;"> &emsp; HTML, CSS, JS</li>
+				<li style="list-style-type: none;"> &emsp; Android, Java, Python</li>
 			</ul>
 		<p>
 			<br>
