--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="about-content" class="content">
 		<br>
 		<h1>About</h1>
-		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic">
+		<img src="https://drive.google.com/uc?export=view&id=1Q6ABuN58dhBOvz7yX1P7rznD0b0xoW8q" alt="My img"title="My image" class="my-pic" style="border-radius:0 ; border-top-right-radius: 12%; border-bottom-left-radius: 12%;">
 
 		<p>
 			Hi! My name is Annapoorani Anantharaman. I am from Chennai. I love drawing, music and am a total movie-buff. 
@@ -57,10 +57,10 @@
 			<br>
 			My interests in Computer science lie in </p>
 			<ul>
-				<li> &emsp; Game development using Unity and C#</li>
-				<li> &emsp; Programming using C++</li>
-				<li> &emsp; Cryptography and network security</li>
-				<li> &emsp; Mobile app development using android</li>
+				<li style="list-style-type: none;"> &emsp; Game development using Unity and C#</li>
+				<li style="list-style-type: none;"> &emsp; Programming using C++</li>
+				<li style="list-style-type: none;"> &emsp; Cryptography and network security</li>
+				<li style="list-style-type: none;"> &emsp; Mobile app development using android</li>
 			</ul>
 			<br>
 			<p>	I have learnt the following languages </p>
